Fixed Vuejs icon on Firefox

--- a/css/general.scss
+++ b/css/general.scss
@@ -76,6 +76,10 @@ h3 {
       }
       .skill {
         margin: 3px 8px;
+        &.vuejs {
+          max-height: 41px;
+          max-width: 41px;
+        }
       }
     }
   }
